# claude-code-saddle

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
.claude/commands/: archive.md  assess.md  cleanup.md  context.md  diff.md  index.md  restore.md  saddle-off.md  saddle-on.md  saddle.md  status.md
.claude/hooks/: post-tool-use.py  post-tool-use.sh  pre-tool-use.py  pre-tool-use.sh  session-start.sh  stop.py  user-prompt-submit.py
project/: CLAUDE.md
saddle/cleanup/: __init__.py  archive_manager.py  dead_code_detector.py  stale_file_tracker.py
saddle/experts/: README.md
saddle/experts/EXPERT-TEMPLATE/: README.md  SKILL.md
saddle/experts/EXPERT-TEMPLATE/knowledge/: README.md
saddle/experts/EXPERT-TEMPLATE/mcp-server/: config.yaml  requirements.txt  server.py
saddle/experts/EXPERT-TEMPLATE/tests/: test_expert.py
saddle/experts/requirements/: README.md  SKILL.md
saddle/experts/requirements/knowledge/: README.md
saddle/experts/requirements/mcp-server/: config.yaml  requirements.txt  server.py
saddle/index/generator/: __init__.py  index_generator.py
saddle/rules/: documentation.md  no-direct-deploy.md  testing-required.md  universal.md
saddle/templates/: assessment.md  expert-claude-snippet.md  project-claude.md  todo.md
saddle/workflows/doc-verify/: doc_verify.py
saddle/workflows/tdd-guard/: README.md  config.yaml  tdd_guard.py
scripts/: generate-index.sh  init-expert.sh  init-nested.sh  init-submodule.sh  run-cleanup.sh  setup.sh  start-expert.sh  test-expert.sh
(+18 files in other folders)
